third_party/move/move-compiler-v2/tests/checking/typing/conditional_global_operations.exp

Diagnostics:
error: type `R` is missing required ability `store` (type was inferred)
   ┌─ tests/checking/typing/conditional_global_operations.move:15:20
   │
15 │         move_to(s, Box<R> { f: R {} });
   │                    ^^^^^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of struct `Box`
   = required by instantiating type parameter `T` of function `move_to`

error: type `R` is missing required ability `store`
   ┌─ tests/checking/typing/conditional_global_operations.move:18:33
   │
18 │         Pair { f1: _, f2: _ } = move_from<Pair<S, R>>(a1);
   │                                 ^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T2` of struct `Pair`
   = required by instantiating type parameter `T` of function `move_from`

error: type `K` is missing required ability `store`
   ┌─ tests/checking/typing/conditional_global_operations.move:21:9
   │
21 │         borrow_global<Box<K>>(a1);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T` of struct `Box`
   = required by instantiating type parameter `T` of function `borrow_global`

error: type `K` is missing required ability `store`
   ┌─ tests/checking/typing/conditional_global_operations.move:22:9
   │
22 │         borrow_global_mut<Pair<S, K>>(a1);
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   = required by instantiating type parameter `T2` of struct `Pair`
   = required by instantiating type parameter `T` of function `borrow_global_mut`
